kubernets/final-project/scripts/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-management-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-management-api
  template:
    metadata:
      labels:
        app: task-management-api
    spec:
      serviceAccountName: task-management-api
      containers:
        - name: api
          image: task-management-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"

          startupProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 3
            failureThreshold: 30

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 3
            failureThreshold: 1

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          volumeMounts:
            - name: config
              mountPath: /data
              readOnly: true
            - mountPath: /pvc
              name: task-management-api-volume

      volumes:
        - name: config
          configMap:
            name: task-management-api-config
        - name: task-management-api-volume
          persistentVolumeClaim:
            claimName: task-management-api-pvc
