kubernets/final-project/scripts/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-management-api
spec:
  type: ClusterIP
  selector:
    app: task-management-api
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
