kubernets/final-project/scripts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-management-api
spec:
  ingressClassName: nginx
  rules:
    - host: task-management.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task-management-api
                port:
                  number: 8080
